# cubs

./: README.md  pyproject.toml
cubs/: __init__.py  initialize_blender.py
cubs/geometry_nodes/: README.md  __init__.py  ico_capsule.py  sample_points_from_mesh.py  show_point_cloud.py  smooth_by_angle.py  uneven_terrain.py
cubs/keyframe_imports/: __init__.py  import_keyframes_with_joints.py  triplet_colours.mtl
cubs/plugins/: auto_usd_fps.py
cubs/shader_nodes/: __init__.py  general_bsdf.py  general_bsdf_4_4.py  wireframe_bsdf.py  world_environment_map.py
cubs/snippets/: __init__.py  clear_custom_normals.py  export.py  extract_from_geonode.py  find_intersections.py  point_instances_to_txt.py
geometry_nodes/: sample_points_from_mesh.py  show_point_cloud.py
shader_nodes/: general_bsdf.py  general_bsdf_4_4.py  set_object_colour.py  set_object_properties.py  world_environment_map.py
snippets/: clear_custom_normals.py  point_instances_to_txt.py
