[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubs"
version = "0.0.1"
description = "A collection of useful blender scripts."
readme = "README.md"
authors = [
    { name = "Melissa Katz", email = "melissa.katz@example.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = []

[project.optional-dependencies]
all = []

[tool.hatch.build.targets.wheel]
packages = ["cubs"]

[project.urls]
Homepage = "https://github.com/Melissa2661/cubs"
